--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ init:
 
 install:
   ps: Bootstrap
+  ps: (new-object net.webclient).DownloadFile('https://github.com/muschellij2/neuroc_dependencies/raw/master/JAGS-4.2.0-Rtools33.exe', 'C:\projects\JAGS-4.2.0.exe')
+  cmd: C:\projects\JAGS-4.2.0.exe
 
 cache:
   - C:\RLibrary
