--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,10 +21,10 @@ environment:
   # R_REMOTES_STANDALONE: true
 
 # Adapt as necessary starting from here
-install:
-  - ps: Bootstrap
-  - ps: (new-object net.webclient).DownloadFile('https://github.com/muschellij2/neuroc_dependencies/raw/master/JAGS-4.2.0-Rtools33.exe', 'C:\projects\JAGS-4.2.0.exe')
-  - cmd: C:\projects\JAGS-4.2.0.exe /S
+# install:
+#   - ps: Bootstrap
+#   - ps: (new-object net.webclient).DownloadFile('https://github.com/muschellij2/neuroc_dependencies/raw/master/JAGS-4.2.0-Rtools33.exe', 'C:\projects\JAGS-4.2.0.exe')
+#   - cmd: C:\projects\JAGS-4.2.0.exe /S
 
 build_script:
   - travis-tool.sh install_deps
